Deployments/Kubernetes/frontend-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-application
  namespace: frontend
spec:
  ports:
    - port: 80
      targetPort: 8081
  selector:
    app: frontend-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-application
  namespace: frontend
spec:
  selector:
    matchLabels:
      app: frontend-app
  replicas: 2
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-application
          image: rhkcontainerregistry.azurecr.io/frontend-app-spring-boot-build-image:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          #readinessProbe:
          #  tcpSocket:
          #    port: 8080
          #  initialDelaySeconds: 5
          #  periodSeconds: 10
            # timeoutSeconds: 2
            # failureThreshold: 1
            # successThreshold: 1
          #livenessProbe:
          #  tcpSocket:
          #    port: 8080
          #  initialDelaySeconds: 15
          #  periodSeconds: 20
            # timeoutSeconds: 2
            #failureThreshold: 1
            # successThreshold: 1
