Deployments/Kubernetes/backend-demo-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod # letsencrypt-staging
    kubernetes.io/ingress.class: nginx
  name: backend-site-ingress
  namespace: backend
spec:
  rules:
  - host: backend.bgarcial.me
    http:
      paths:
      - backend:
          serviceName: backend-demo
          servicePort: 80
        path: /
  tls: # < placing a host in the TLS config will indicate a cert should be created
  - hosts:
    - backend.bgarcial.me
    secretName: letsencrypt-prod # letsencrypt-staging
